--- a/libs/agno/pyproject.toml
+++ b/libs/agno/pyproject.toml
@@ -107,7 +107,7 @@ mcp = ["mcp"]
 mem0 = ["mem0ai"]
 newspaper = ["newspaper4k", "lxml_html_clean"]
 opencv = ["opencv-python"]
-psycopg = ["psycopg-binary"]
+psycopg = ["psycopg-binary", "psycopg"]
 todoist = ["todoist-api-python"]
 valyu = ["valyu"]
 webex = ["webexpythonsdk"]
