--- a/libs/agno/pyproject.toml
+++ b/libs/agno/pyproject.toml
@@ -4,7 +4,7 @@ version = "2.0.0-rc.1"
 description = "Agno: a lightweight library for building Multi-Agent Systems"
 requires-python = ">=3.7,<4"
 readme = "README.md"
-license = { file = "LICENSE" }
+license-files = ["LICENSE"]
 authors = [
   {name = "Ashpreet Bedi", email = "ashpreet@agno.com"}
 ]
