first working version

--- a/libs/agno/pyproject.toml
+++ b/libs/agno/pyproject.toml
@@ -132,7 +132,7 @@ async_postgres = ["asyncpg"]
 sqlite = ["sqlalchemy"]
 gcs = ["google-cloud-storage"]
 firestore = ["google-cloud-firestore"]
-redis = ["redis"]
+redis = ["redis", "redisvl"]
 
 # Dependencies for Vector databases
 pgvector = ["pgvector"]
