--- a/cookbook/os/os_config/config.yaml
+++ b/cookbook/os/os_config/config.yaml
@@ -1,11 +1,3 @@
-dbs:
-  - id: basic-db
-    display_names:
-      session: Session
-      memory: Memory
-      eval: Eval
-      metrics: Metrics
-      knowledge: Knowledge
 chat:
   quick_prompts:
     basic-agent:
@@ -16,3 +8,9 @@ chat:
       - "Which members are in the team?"
     basic-workflow:
       - "What are the steps in the workflow?"
+memory:
+  display_name: Default Memory Page Name
+  dbs:
+    - db_id: db-0001
+      domain_config:
+        display_name: Postgres Memory
