--- a/cookbook/agent_os/os_config/config.yaml
+++ b/cookbook/agent_os/os_config/config.yaml
@@ -1,4 +1,14 @@
 
+chat:
+  quick_prompts:
+    basic-agent:
+      - "What can you do?"
+      - "What tools do you have?"
+      - "Tell me about AgentOS"
+    basic-team:
+      - "Which members are in the team?"
+    basic-workflow:
+      - "What are the steps in the workflow?"
 memory:
   display_name: Default Memory Page Name
   dbs:
