chonkie in test deps

--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -139,6 +139,7 @@ jobs:
           set -e
           ./scripts/dev_setup.sh
           pip install chonkie[st]
+          pip install chonkie
       - name: Run tests for Agno
         working-directory: .
         run: |
