--- a/cookbook/examples/streamlit_apps/agentic_rag/requirements.txt
+++ b/cookbook/examples/streamlit_apps/agentic_rag/requirements.txt
@@ -44,13 +44,17 @@ distro==1.9.0
     #   anthropic
     #   groq
     #   openai
+docstring-parser==0.17.0
+    # via agno
 gitdb==4.0.12
     # via gitpython
 gitpython==3.1.45
-    # via streamlit
+    # via
+    #   agno
+    #   streamlit
 google-auth==2.40.3
     # via google-genai
-google-genai==1.34.0
+google-genai==1.35.0
     # via -r cookbook/examples/streamlit_apps/agentic_rag/requirements.in
 groq==0.31.1
     # via -r cookbook/examples/streamlit_apps/agentic_rag/requirements.in
@@ -60,6 +64,7 @@ httpcore==1.0.9
     # via httpx
 httpx==0.28.1
     # via
+    #   agno
     #   anthropic
     #   google-genai
     #   groq
@@ -83,6 +88,8 @@ jsonschema-specifications==2025.9.1
     # via jsonschema
 lxml==6.0.1
     # via ddgs
+markdown-it-py==4.0.0
+    # via rich
 markupsafe==3.0.2
     # via jinja2
 mdurl==0.1.2
@@ -90,8 +97,8 @@ mdurl==0.1.2
 narwhals==2.4.0
     # via altair
 nest-asyncio==1.6.0
-    # via -r cookbook_v2/examples/streamlit_apps/agentic_rag/requirements.in
-numpy==2.3.2
+    # via -r cookbook/examples/streamlit_apps/agentic_rag/requirements.in
+numpy==2.3.3
     # via
     #   pandas
     #   pydeck
@@ -100,6 +107,7 @@ openai==1.107.0
     # via -r cookbook/examples/streamlit_apps/agentic_rag/requirements.in
 packaging==25.0
     # via
+    #   agno
     #   altair
     #   streamlit
 pandas==2.3.2
@@ -124,18 +132,32 @@ pyasn1-modules==0.4.2
     # via google-auth
 pydantic==2.11.7
     # via
+    #   agno
     #   anthropic
     #   google-genai
     #   groq
     #   openai
+    #   pydantic-settings
 pydantic-core==2.33.2
     # via pydantic
+pydantic-settings==2.10.1
+    # via agno
 pydeck==0.9.1
     # via streamlit
+pygments==2.19.2
+    # via rich
 python-dateutil==2.9.0.post0
     # via pandas
+python-dotenv==1.1.1
+    # via
+    #   agno
+    #   pydantic-settings
+python-multipart==0.0.20
+    # via agno
 pytz==2025.2
     # via pandas
+pyyaml==6.0.2
+    # via agno
 referencing==0.36.2
     # via
     #   jsonschema
@@ -154,6 +176,8 @@ rpds-py==0.27.1
     #   referencing
 rsa==4.9.1
     # via google-auth
+shellingham==1.5.4
+    # via typer
 six==1.17.0
     # via python-dateutil
 smmap==5.0.2
@@ -182,6 +206,7 @@ typer==0.17.4
     # via agno
 typing-extensions==4.15.0
     # via
+    #   agno
     #   altair
     #   anthropic
     #   anyio
@@ -194,9 +219,12 @@ typing-extensions==4.15.0
     #   referencing
     #   sqlalchemy
     #   streamlit
+    #   typer
     #   typing-inspection
 typing-inspection==0.4.1
-    # via pydantic
+    # via
+    #   pydantic
+    #   pydantic-settings
 tzdata==2025.2
     # via pandas
 urllib3==2.5.0
