--- a/cookbook/examples/streamlit_apps/llama_tutor/requirements.txt
+++ b/cookbook/examples/streamlit_apps/llama_tutor/requirements.txt
@@ -46,7 +46,7 @@ distro==1.9.0
     #   openai
 docstring-parser==0.17.0
     # via agno
-exa-py==1.15.5
+exa-py==1.15.6
     # via -r cookbook/examples/streamlit_apps/llama_tutor/requirements.in
 gitdb==4.0.12
     # via gitpython
@@ -56,7 +56,7 @@ gitpython==3.1.45
     #   streamlit
 google-auth==2.40.3
     # via google-genai
-google-genai==1.34.0
+google-genai==1.35.0
     # via -r cookbook/examples/streamlit_apps/llama_tutor/requirements.in
 groq==0.31.1
     # via -r cookbook/examples/streamlit_apps/llama_tutor/requirements.in
@@ -77,7 +77,7 @@ idna==3.10
     #   anyio
     #   httpx
     #   requests
-jinja2==3.1.5
+jinja2==3.1.6
     # via
     #   altair
     #   pydeck
@@ -101,10 +101,10 @@ narwhals==2.4.0
     # via altair
 nest-asyncio==1.6.0
     # via -r cookbook/examples/streamlit_apps/llama_tutor/requirements.in
-numpy==2.3.2
+numpy==2.3.3
     # via
-    #   altair
     #   pandas
+    #   pydeck
     #   streamlit
 openai==1.107.0
     # via
@@ -129,11 +129,7 @@ psycopg-binary==3.2.10
     # via psycopg
 pyarrow==21.0.0
     # via streamlit
-psycopg[binary]==3.2.4
-    # via -r cookbook/examples/streamlit_apps/llama_tutor/requirements.in
-psycopg-binary==3.2.4
-    # via psycopg
-pydantic==2.12.1
+pyasn1==0.6.1
     # via
     #   pyasn1-modules
     #   rsa
@@ -166,13 +162,14 @@ python-multipart==0.0.20
     # via agno
 pytz==2025.2
     # via pandas
-referencing==0.35.1
+pyyaml==6.0.2
+    # via agno
+referencing==0.36.2
     # via
     #   jsonschema
     #   jsonschema-specifications
 requests==2.32.5
     # via
-    #   ddgs
     #   exa-py
     #   google-genai
     #   streamlit
@@ -194,6 +191,7 @@ smmap==5.0.2
     # via gitdb
 sniffio==1.3.1
     # via
+    #   anthropic
     #   anyio
     #   groq
     #   openai
@@ -215,6 +213,8 @@ typer==0.17.4
     # via agno
 typing-extensions==4.15.0
     # via
+    #   agno
+    #   altair
     #   anthropic
     #   anyio
     #   exa-py
@@ -224,6 +224,7 @@ typing-extensions==4.15.0
     #   psycopg
     #   pydantic
     #   pydantic-core
+    #   referencing
     #   sqlalchemy
     #   streamlit
     #   typer
