--- a/cookbook/examples/streamlit_apps/mcp_agent/requirements.txt
+++ b/cookbook/examples/streamlit_apps/mcp_agent/requirements.txt
@@ -14,6 +14,7 @@ anyio==4.10.0
     #   google-genai
     #   groq
     #   httpx
+    #   mcp
     #   openai
     #   sse-starlette
     #   starlette
@@ -56,7 +57,7 @@ gitpython==3.1.45
     #   streamlit
 google-auth==2.40.3
     # via google-genai
-google-genai==1.34.0
+google-genai==1.35.0
     # via -r cookbook/examples/streamlit_apps/mcp_agent/requirements.in
 groq==0.31.1
     # via -r cookbook/examples/streamlit_apps/mcp_agent/requirements.in
@@ -66,11 +67,13 @@ h11==0.16.0
     #   uvicorn
 httpcore==1.0.9
     # via httpx
-httpx==0.29.2
+httpx==0.28.1
     # via
+    #   agno
     #   anthropic
     #   google-genai
     #   groq
+    #   mcp
     #   openai
 httpx-sse==0.4.1
     # via mcp
@@ -79,7 +82,7 @@ idna==3.10
     #   anyio
     #   httpx
     #   requests
-jinja2==3.1.5
+jinja2==3.1.6
     # via
     #   altair
     #   pydeck
@@ -111,7 +114,7 @@ narwhals==2.4.0
     # via altair
 nest-asyncio==1.6.0
     # via -r cookbook/examples/streamlit_apps/mcp_agent/requirements.in
-numpy==2.3.2
+numpy==2.3.3
     # via
     #   lancedb
     #   pandas
@@ -126,6 +129,8 @@ packaging==25.0
     # via
     #   agno
     #   altair
+    #   deprecation
+    #   lancedb
     #   streamlit
 pandas==2.3.2
     # via streamlit
@@ -186,7 +191,9 @@ python-multipart==0.0.20
     #   mcp
 pytz==2025.2
     # via pandas
-referencing==0.35.1
+pyyaml==6.0.2
+    # via agno
+referencing==0.36.2
     # via
     #   jsonschema
     #   jsonschema-specifications
@@ -212,6 +219,7 @@ smmap==5.0.2
     # via gitdb
 sniffio==1.3.1
     # via
+    #   anthropic
     #   anyio
     #   groq
     #   openai
@@ -239,7 +247,10 @@ typer==0.17.4
     # via agno
 typing-extensions==4.15.0
     # via
+    #   agno
+    #   altair
     #   anthropic
+    #   anyio
     #   google-genai
     #   groq
     #   lance-namespace
@@ -248,6 +259,7 @@ typing-extensions==4.15.0
     #   psycopg
     #   pydantic
     #   pydantic-core
+    #   referencing
     #   sqlalchemy
     #   starlette
     #   streamlit
