feat: enhance CSV reader to support multiple file encodings
- Add chardet library dependency for automatic encoding detection
- Implement encoding detection functionality supporting UTF-8, GBK, GB2312, Latin-1 and more
- Add encoding fallback mechanism to try alternative encodings when primary fails
- Improve error handling and logging features
- Maintain backward compatibility without affecting existing APIs

This solves the issue where CSV reader could only handle UTF-8 encoded files, now it can automatically process CSV files with various encodings.

--- a/libs/agno/pyproject.toml
+++ b/libs/agno/pyproject.toml
@@ -151,7 +151,7 @@ upstash = ["upstash-vector"]
 pdf = ["pypdf", "rapidocr_onnxruntime"]
 docx = ["python-docx"]
 text = ["aiofiles"]
-csv = ["aiofiles"]
+csv = ["aiofiles", "chardet"]
 markdown = ["unstructured", "markdown", "aiofiles"]
 chonkie = ["chonkie[st]", "chonkie"]
 
