--- a/libs/agno/pyproject.toml
+++ b/libs/agno/pyproject.toml
@@ -111,6 +111,7 @@ memori = ["memorisdk"]
 newspaper = ["newspaper4k", "lxml_html_clean"]
 opencv = ["opencv-python"]
 psycopg = ["psycopg-binary", "psycopg"]
+reportlab = ["reportlab"]
 todoist = ["todoist-api-python"]
 valyu = ["valyu"]
 webex = ["webexpythonsdk"]
@@ -232,6 +233,7 @@ tools = [
   "agno[memori]",
   "agno[google_bigquery]",
   "agno[psycopg]",
+  "agno[reportlab]",
   "agno[trafilatura]",
   "agno[neo4j]",
 ]
@@ -467,6 +469,7 @@ module = [
   "acouchbase.*",
   "zep_cloud.*",
   "oxylabs.*",
+  "reportlab.*",
   "surrealdb.*",
   "trafilatura.*"
 ]
