--- a/libs/agno/pyproject.toml
+++ b/libs/agno/pyproject.toml
@@ -48,7 +48,7 @@ dependencies = [
 [project.optional-dependencies]
 dev = ["mypy", "pytest", "pytest-asyncio", "pytest-cov", "pytest-mock", "ruff", "timeout-decorator", "types-pyyaml", "types-aiofiles", "fastapi", "uvicorn"]
 
-os = ["fastapi", "uvicorn"]
+os = ["fastapi", "uvicorn", "PyJWT"]
 
 # Models integration test dependencies
 integration-tests = [
