--- a/libs/agno/pyproject.toml
+++ b/libs/agno/pyproject.toml
@@ -34,6 +34,7 @@ dependencies = [
   "docstring-parser",
   "gitpython",
   "httpx",
+  "json-repair",
   "packaging",
   "pydantic-settings",
   "pydantic",
