--- a/libs/agno/requirements.txt
+++ b/libs/agno/requirements.txt
@@ -26,6 +26,8 @@ idna==3.10
     # via
     #   anyio
     #   httpx
+json-repair==0.51.0
+    # via agno (libs/agno/pyproject.toml)
 markdown-it-py==3.0.0
     # via rich
 mdurl==0.1.2
