--- a/libs/agno/pyproject.toml
+++ b/libs/agno/pyproject.toml
@@ -1,6 +1,6 @@
 [project]
 name = "agno"
-version = "2.1.1"
+version = "2.1.2"
 description = "Agno: a lightweight library for building Multi-Agent Systems"
 requires-python = ">=3.7,<4"
 readme = "README.md"
@@ -161,7 +161,7 @@ chonkie = ["chonkie[st]", "chonkie"]
 agui = ["ag-ui-protocol"]
 
 # Dependencies for A2A integration
-a2a = ["a2a"]
+a2a = ["a2a-sdk"]
 
 # Dependencies for Embedders
 huggingface = [
@@ -189,11 +189,9 @@ models = [
   "agno[azure]",
   "agno[cerebras]",
   "agno[cohere]",
-  "agno[infinity]",
   "agno[google]",
   "agno[groq]",
   "agno[ibm]",
-  "agno[infinity]",
   "agno[litellm]",
   "agno[meta]",
   "agno[mistral]",
@@ -206,7 +204,6 @@ models = [
 tools = [
   "agno[apify]",
   "agno[arxiv]",
-  "agno[brave]",
   "agno[exa]",
   "agno[cartesia]",
   "agno[ddg]",
@@ -289,6 +286,7 @@ embedders = [
 # All libraries for testing
 tests = [
     "agno[dev]",
+    "agno[integration-tests]",
     "agno[models]",
     "agno[tools]",
     "agno[storage]",
@@ -298,7 +296,6 @@ tests = [
     "agno[performance]",
     "agno[cookbooks]",
     "agno[agui]",
-    "agno[a2a]",
     "twine",
     "build",
 ]
