--- a/libs/agno/pyproject.toml
+++ b/libs/agno/pyproject.toml
@@ -189,6 +189,7 @@ models = [
   "agno[azure]",
   "agno[cerebras]",
   "agno[cohere]",
+  "agno[infinity]",
   "agno[google]",
   "agno[groq]",
   "agno[ibm]",
@@ -204,6 +205,7 @@ models = [
 tools = [
   "agno[apify]",
   "agno[arxiv]",
+  "agno[brave]",
   "agno[exa]",
   "agno[cartesia]",
   "agno[ddg]",
