--- a/libs/agno/pyproject.toml
+++ b/libs/agno/pyproject.toml
@@ -192,6 +192,7 @@ models = [
   "agno[google]",
   "agno[groq]",
   "agno[ibm]",
+  "agno[infinity]",
   "agno[litellm]",
   "agno[meta]",
   "agno[mistral]",
@@ -204,6 +205,7 @@ models = [
 tools = [
   "agno[apify]",
   "agno[arxiv]",
+  "agno[brave]",
   "agno[exa]",
   "agno[cartesia]",
   "agno[ddg]",
@@ -286,7 +288,6 @@ embedders = [
 # All libraries for testing
 tests = [
     "agno[dev]",
-    "agno[integration-tests]",
     "agno[models]",
     "agno[tools]",
     "agno[storage]",
