--- a/libs/agno/pyproject.toml
+++ b/libs/agno/pyproject.toml
@@ -275,6 +275,7 @@ vectordbs = [
 knowledge = [
   "agno[pdf]",
   "agno[docx]",
+  "agno[pptx]",
   "agno[text]",
   "agno[csv]",
   "agno[markdown]",
