feat: Add python-pptx dependency for PPTX file support in pyproject.toml

--- a/libs/agno/pyproject.toml
+++ b/libs/agno/pyproject.toml
@@ -153,6 +153,7 @@ upstash = ["upstash-vector"]
 # Dependencies for Knowledge
 pdf = ["pypdf", "rapidocr_onnxruntime"]
 docx = ["python-docx"]
+pptx = ["python-pptx"]
 text = ["aiofiles"]
 csv = ["aiofiles"]
 markdown = ["unstructured", "markdown", "aiofiles"]
